:sparkles: feat: getGamesByGenre controller
