# Backend/Controller/GamesController.js
@@ -194,4 +194,25 @@ module.exports = {
       return res.status(400).json({ error: error.message });
     }
   },
+  getGamesByGenre: async (req, res) => {
+    // #swagger.tags = ['Games']
+    // #swagger.description = 'Return games by genre'
+    try {
+      const { genre } = req.params;
+      const [existGenre] = categoryGames.filter(
+        (category) => category === genre
+      );
+      if (!existGenre) throw new Error("Genre not fount!");
+      const allGames = await getAllGamesService();
+      const listByGenre = allGames.filter((game) => game.genre === existGenre);
+      const listLength = listByGenre.length;
+      console.log(listLength);
+      if (listLength < 5) throw new Error("Insufficient games ");
+      if (listLength >= 5 && listLength < 11)
+        return res.status(200).send(listByGenre.slice(0, listLength - 1));
+      return res.status(200).json(listByGenre.slice(0, 15));
+    } catch (error) {
+      return res.status(400).json({ error: error.message });
+    }
+  },
 };
